# corvalis-skills

./: .gitignore  LICENSE  README.md  install-codex.sh  install.sh
.github/workflows/: recon-ci.yml  recon-release.yml
skills/auto-legion/: SKILL.md
skills/auto-sanity/: SKILL.md
skills/auto-testability/: SKILL.md
skills/codex-plan-refinement/: SKILL.md
skills/codex-validation/: SKILL.md
skills/dominion/: SKILL.md
skills/future/auto-refactor/: SKILL.md
skills/plan-validate/: SKILL.md
skills/stream/: SKILL.md
skills/stream/references/: status-schema.md
skills/summon/: SKILL.md
skills/summon/recon/: instructions.md
skills/triumvirate/: SKILL.md
skills/triumvirate/prompts/: advocate.md  analyst.md  critic.md
skills/verify/: SKILL.md
tools/recon/: Cargo.toml  build.rs
tools/recon/scripts/: update-grammars.sh
tools/recon/src/: analyze.rs  cli.rs  complexity.rs  config.rs  deps.rs  language.rs  lib.rs  main.rs  metrics.rs  output.rs  overview.rs  parse.rs  ranking.rs  resolve.rs  symbols.rs  walk.rs
tools/recon/src/queries/: javascript.rs  mod.rs  svelte.rs  typescript.rs
