[package]
name = "corvalis-recon"
version = "0.1.0"
edition = "2024"
description = "Structured codebase analysis for AI planning"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
json5 = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
streaming-iterator = "0.1"
serde_json = "1"
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[dev-dependencies]
tempfile = "3.27.0"
